--- a/cs/Makefile
+++ b/cs/Makefile
@@ -2,16 +2,23 @@ export TEXINPUTS=../tex//:
 
 MARKDOWN_FILES := $(wildcard *.md)
 
-all: $(MARKDOWN_FILES:.md=.tex) prace.pdf clean
+all: $(MARKDOWN_FILES:.md=.tex) svoc.pdf clean
 
 %.tex: %.md
 	pandoc -L statement.lua --natbib --citeproc $< -o $@
 
 # LaTeX je potreba spustit nekolikrat, aby spravne spocital odkazy
-.PHONY: prace.pdf
+.PHONY: prace.pdf svoc.pdf
 prace.pdf: prace.tex $(wildcard *.tex) literatura.bib prace.xmpdata
 	pdflatex $<
 	bibtex prace
+	pdflatex $<
+	pdflatex $<
+
+.PHONY: prace.pdf
+svoc.pdf: svoc.tex $(wildcard *.tex) literatura.bib prace.xmpdata
+	pdflatex $<
+	bibtex svoc
 	pdflatex $<
 	pdflatex $<
 
